# Spoolman

./: .claudeignore  .gitignore  .semgrepignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Leptos.toml  README.md  TODO.md  docker-compose.test.yml
assets/: spoolman.json
crates/spoolman-client/: Cargo.toml
crates/spoolman-client/src/: app.rs  lib.rs  main.rs  state.rs
crates/spoolman-client/src/api/: filament.rs  location.rs  mod.rs  spool.rs
crates/spoolman-client/src/components/: layout.rs  mod.rs  pagination.rs  table.rs
crates/spoolman-server/: Cargo.toml
crates/spoolman-server/src/: backup.rs  config.rs  index.html  main.rs  store.rs
crates/spoolman-types/: Cargo.toml
crates/spoolman-types/src/: lib.rs  models.rs  requests.rs  responses.rs
openspec/changes/add-css-styling-stylers/: design.md  proposal.md  tasks.md
openspec/changes/add-filament-type/: tasks.md
openspec/changes/migrate-to-rust/: tasks.md
openspec/specs/ciede2000-color-distance/: spec.md
openspec/specs/color-distance-algorithm/: spec.md
openspec/specs/filament-management/: spec.md
openspec/specs/light-theme-palette/: spec.md
openspec/specs/spool-management/: spec.md
scripts/: run-e2e.sh
spoolman/api/v1/: filament.py  router.py  setting.py  spool.py
style/: spoolman.css
tests/e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/e2e/pages/: FilamentsPage.ts  LocationsPage.ts  SpoolsPage.ts  index.ts
tests/e2e/tests/: color-sort.spec.ts  filaments.spec.ts  locations.spec.ts  navigation.spec.ts  spools.spec.ts
(+41 files in other folders)
